<resources>
    <string name="app_name">Smart Vision</string>
    <string-array name="cyl_orma">
        <item>-2.00</item>
        <item>-1.75</item>
        <item>-1.50</item>
        <item>-1.25</item>
        <item>-1.00</item>
        <item>-0.75</item>
        <item>-0.50</item>
        <item>-0.25</item>

        <item>0.00</item>

        <item>+0.25</item>
        <item>+0.50</item>
        <item>+0.75</item>
        <item>+1.00</item>
        <item>+1.25</item>
        <item>+1.50</item>
        <item>+1.75</item>
        <item>+2.00</item>
    </string-array>
    <string-array name="sph_orma">
        <item>-4.00</item>
        <item>-3.75</item>
        <item>-3.50</item>
        <item>-3.25</item>
        <item>-3.00</item>
        <item>-2.75</item>
        <item>-2.50</item>
        <item>-2.25</item>
        <item>-2.00</item>
        <item>-1.75</item>
        <item>-1.50</item>
        <item>-1.25</item>
        <item>-1.00</item>
        <item>-0.75</item>
        <item>-0.50</item>
        <item>-0.25</item>

        <item>0.00</item>

        <item>+0.25</item>
        <item>+0.50</item>
        <item>+0.75</item>
        <item>+1.00</item>
        <item>+1.25</item>
        <item>+1.50</item>
        <item>+1.75</item>
        <item>+2.00</item>
        <item>+2.25</item>
        <item>+2.50</item>
        <item>+2.75</item>
        <item>+3.00</item>
        <item>+3.25</item>
        <item>+3.50</item>
        <item>+3.75</item>
        <item>+4.00</item>
        <item>+4.25</item>
        <item>+4.50</item>
        <item>+4.75</item>
        <item>+5.00</item>
        <item>+5.25</item>
        <item>+5.50</item>
        <item>+5.75</item>
        <item>+6.00</item>
    </string-array>
    <string-array name="cyl_emi">
        <item>-4.00</item>
        <item>-3.75</item>
        <item>-3.50</item>
        <item>-3.25</item>
        <item>-3.00</item>
        <item>-2.75</item>
        <item>-2.50</item>
        <item>-2.25</item>
        <item>-2.00</item>
        <item>-1.75</item>
        <item>-1.50</item>
        <item>-1.25</item>
        <item>-1.00</item>
        <item>-0.75</item>
        <item>-0.50</item>
        <item>-0.25</item>

        <item>0.00</item>

        <item>+0.25</item>
        <item>+0.50</item>
        <item>+0.75</item>
        <item>+1.00</item>
        <item>+1.25</item>
        <item>+1.50</item>
        <item>+1.75</item>
        <item>+2.00</item>
        <item>+2.25</item>
        <item>+2.50</item>
        <item>+2.75</item>
        <item>+3.00</item>
        <item>+3.25</item>
        <item>+3.50</item>
        <item>+3.75</item>
        <item>+4.00</item>
    </string-array>
    <string-array name="sph_emi">
        <item>-5.00</item>
        <item>-4.75</item>
        <item>-4.50</item>
        <item>-4.25</item>
        <item>-4.00</item>
        <item>-3.75</item>
        <item>-3.50</item>
        <item>-3.25</item>
        <item>-3.00</item>
        <item>-2.75</item>
        <item>-2.50</item>
        <item>-2.25</item>
        <item>-2.00</item>
        <item>-1.75</item>
        <item>-1.50</item>
        <item>-1.25</item>
        <item>-1.00</item>
        <item>-0.75</item>
        <item>-0.50</item>
        <item>-0.25</item>

        <item>0.00</item>

        <item>+0.25</item>
        <item>+0.50</item>
        <item>+0.75</item>
        <item>+1.00</item>
        <item>+1.25</item>
        <item>+1.50</item>
        <item>+1.75</item>
        <item>+2.00</item>
        <item>+2.25</item>
        <item>+2.50</item>
        <item>+2.75</item>
        <item>+3.00</item>
        <item>+3.25</item>
        <item>+3.50</item>
        <item>+3.75</item>
        <item>+4.00</item>
        <item>+4.25</item>
        <item>+4.50</item>
        <item>+4.75</item>
        <item>+5.00</item>
    </string-array>
    <string-array name="cyl_one_sixty">
        <item>-3.00</item>
        <item>-2.75</item>
        <item>-2.50</item>
        <item>-2.25</item>
        <item>-2.00</item>
        <item>-1.75</item>
        <item>-1.50</item>
        <item>-1.25</item>
        <item>-1.00</item>
        <item>-0.75</item>
        <item>-0.50</item>
        <item>-0.25</item>

        <item>0.00</item>

        <item>+0.25</item>
        <item>+0.50</item>
        <item>+0.75</item>
        <item>+1.00</item>
        <item>+1.25</item>
        <item>+1.50</item>
        <item>+1.75</item>
        <item>+2.00</item>
    </string-array>
    <string-array name="sph_one_sixty">
        <item>-6.00</item>
        <item>-5.75</item>
        <item>-5.50</item>
        <item>-5.25</item>
        <item>-5.00</item>
        <item>-4.75</item>
        <item>-4.50</item>
        <item>-4.25</item>
        <item>-4.00</item>
        <item>-3.75</item>
        <item>-3.50</item>
        <item>-3.25</item>
        <item>-3.00</item>
        <item>-2.75</item>
        <item>-2.50</item>
        <item>-2.25</item>
        <item>-2.00</item>

        <item>+2.00</item>
        <item>+2.25</item>
        <item>+2.50</item>
        <item>+2.75</item>
        <item>+3.00</item>
        <item>+3.25</item>
        <item>+3.50</item>
        <item>+3.75</item>
        <item>+4.00</item>
        <item>+4.25</item>
        <item>+4.50</item>
        <item>+4.75</item>
        <item>+5.00</item>
        <item>+5.25</item>
        <item>+5.50</item>
        <item>+5.75</item>
        <item>+6.00</item>
    </string-array>
    <string-array name="cyl_one_sixty_seven">
        <item>-4.00</item>
        <item>-3.75</item>
        <item>-3.50</item>
        <item>-3.25</item>
        <item>-3.00</item>
        <item>-2.75</item>
        <item>-2.50</item>
        <item>-2.25</item>
        <item>-2.00</item>
        <item>-1.75</item>
        <item>-1.50</item>
        <item>-1.25</item>
        <item>-1.00</item>
        <item>-0.75</item>
        <item>-0.50</item>
        <item>-0.25</item>

        <item>0.00</item>

        <item>+0.25</item>
        <item>+0.50</item>
        <item>+0.75</item>
        <item>+1.00</item>
        <item>+1.25</item>
        <item>+1.50</item>
        <item>+1.75</item>
        <item>+2.00</item>
        <item>+2.25</item>
        <item>+2.50</item>
        <item>+2.75</item>
        <item>+3.00</item>
        <item>+3.25</item>
        <item>+3.50</item>
        <item>+3.75</item>
        <item>+4.00</item>
    </string-array>
    <string-array name="sph_one_sixty_seven">
        <item>-8.00</item>
        <item>-7.75</item>
        <item>-7.50</item>
        <item>-7.25</item>
        <item>-7.00</item>
        <item>-6.75</item>
        <item>-6.50</item>
        <item>-6.25</item>
        <item>-6.00</item>
        <item>-5.75</item>
        <item>-5.50</item>
        <item>-5.25</item>
        <item>-5.00</item>
        <item>-4.75</item>
        <item>-4.50</item>
        <item>-4.25</item>
        <item>-4.00</item>
        <item>-3.75</item>
        <item>-3.50</item>
        <item>-3.25</item>
        <item>-3.00</item>

        <item>+2.00</item>
        <item>+2.25</item>
        <item>+2.50</item>
        <item>+2.75</item>
        <item>+3.00</item>
        <item>+3.25</item>
        <item>+3.50</item>
        <item>+3.75</item>
        <item>+4.00</item>
        <item>+4.25</item>
        <item>+4.50</item>
        <item>+4.75</item>
        <item>+5.00</item>
        <item>+5.25</item>
        <item>+5.50</item>
        <item>+5.75</item>
        <item>+6.00</item>
        <item>+6.25</item>
        <item>+6.50</item>
        <item>+6.75</item>
        <item>+7.00</item>
        <item>+7.25</item>
        <item>+7.50</item>
        <item>+7.75</item>
        <item>+8.00</item>
    </string-array>
    <string-array name="cyl_one_seventy_four">
        <item>-2.00</item>
        <item>-1.75</item>
        <item>-1.50</item>
        <item>-1.25</item>
        <item>-1.00</item>
        <item>-0.75</item>
        <item>-0.50</item>
        <item>-0.25</item>
        <item>0.00</item>
    </string-array>
    <string-array name="sph_one_seventy_four">
        <item>-12.00</item>
        <item>-11.75</item>
        <item>-11.50</item>
        <item>-11.25</item>
        <item>-11.00</item>
        <item>-10.75</item>
        <item>-10.50</item>
        <item>-10.25</item>
        <item>-10.00</item>
        <item> -9.75</item>
        <item> -9.50</item>
        <item> -9.25</item>
        <item> -9.00</item>
        <item> -8.75</item>
        <item> -8.50</item>
        <item> -8.25</item>
        <item> -8.00</item>
        <item> -7.75</item>
        <item> -7.50</item>
        <item> -7.25</item>
        <item> -7.00</item>
        <item> -6.75</item>
        <item> -6.50</item>
        <item> -6.25</item>
        <item> -6.00</item>
        <item> -5.75</item>
        <item> -5.50</item>
        <item> -5.25</item>
        <item> -5.00</item>
    </string-array>
    <string-array name="cyl_trans">
        <item>-2.00</item>
        <item>-1.75</item>
        <item>-1.50</item>
        <item>-1.25</item>
        <item>-1.00</item>
        <item>-0.75</item>
        <item>-0.50</item>
        <item>-0.25</item>

        <item>0.00</item>

        <item>+0.25</item>
        <item>+0.50</item>
        <item>+0.75</item>
        <item>+1.00</item>
        <item>+1.25</item>
        <item>+1.50</item>
        <item>+1.75</item>
        <item>+2.00</item>
    </string-array>
    <string-array name="sph_trans">
        <item>-4.00</item>
        <item>-3.75</item>
        <item>-3.50</item>
        <item>-3.25</item>
        <item>-3.00</item>
        <item>-2.75</item>
        <item>-2.50</item>
        <item>-2.25</item>
        <item>-2.00</item>
        <item>-1.75</item>
        <item>-1.50</item>
        <item>-1.25</item>
        <item>-1.00</item>
        <item>-0.75</item>
        <item>-0.50</item>
        <item>-0.25</item>

        <item>0.00</item>

        <item>+0.25</item>
        <item>+0.50</item>
        <item>+0.75</item>
        <item>+1.00</item>
        <item>+1.25</item>
        <item>+1.50</item>
        <item>+1.75</item>
        <item>+2.00</item>
        <item>+2.25</item>
        <item>+2.50</item>
        <item>+2.75</item>
        <item>+3.00</item>
        <item>+3.25</item>
        <item>+3.50</item>
        <item>+3.75</item>
        <item>+4.00</item>
    </string-array>
    <string-array name="cyl_pc">

        <item>-2.00</item>
        <item>-1.75</item>
        <item>-1.50</item>
        <item>-1.25</item>
        <item>-1.00</item>
        <item>-0.75</item>
        <item>-0.50</item>
        <item>-0.25</item>

        <item>0.00</item>

        <item>+0.25</item>
        <item>+0.50</item>
        <item>+0.75</item>
        <item>+1.00</item>
        <item>+1.25</item>
        <item>+1.50</item>
        <item>+1.75</item>
        <item>+2.00</item>

    </string-array>
    <string name="price">Price</string>
    <string name="quantity_short">Quan.</string>
    <string name="cylinder_short">Cyl.</string>
    <string name="sphere_short">Sph.</string>
    <string name="order">Order</string>
    <string name="info">Info</string>
    <string name="organic">Organic</string>
    <string name="pc_sil">PC - SIL</string>
    <string name="sun">Sun</string>
    <string name="history">History</string>
    <string name="logo">Logo</string>
</resources>