<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lens_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/sph_title_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cyl_title_text_view"
        tools:text="Type" />

    <TextView
        android:id="@+id/cyl_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/cylinder_short"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/lens_type"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sph_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp_padding_margin"
        android:text="@string/sphere_short"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/cyl_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/cyl_title_text_view" />

    <TextView
        android:id="@+id/lens_cyl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/cyl_title_text_view"
        app:layout_constraintStart_toEndOf="@+id/cyl_title_text_view"
        app:layout_constraintTop_toTopOf="@+id/cyl_title_text_view"
        tools:text="+1.00" />

    <TextView
        android:id="@+id/lens_sph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/sph_title_text_view"
        app:layout_constraintStart_toStartOf="@+id/lens_cyl"
        app:layout_constraintTop_toTopOf="@+id/sph_title_text_view"
        tools:text="+14:00" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp_padding_margin"
        android:text="@string/quantity_short"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp_padding_margin"
        android:text="@string/price"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/cyl_title_text_view"
        app:layout_constraintEnd_toStartOf="@+id/lens_price"
        app:layout_constraintTop_toTopOf="@+id/cyl_title_text_view" />

    <TextView
        android:id="@+id/lens_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/lens_price"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0"
        tools:text="5" />

    <TextView
        android:id="@+id/lens_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/delete_image_view"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        tools:text="14,00E" />

    <ImageView
        android:id="@+id/delete_image_view"
        android:layout_width="@dimen/forty_eight_dp_buttons"
        android:layout_height="@dimen/forty_eight_dp_buttons"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_baseline_clear_24"
        app:layout_constraintBottom_toBottomOf="@+id/lens_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lens_price" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_dp_view_height"
        android:layout_marginStart="@dimen/sixteen_dp_padding_margin"
        android:layout_marginTop="@dimen/eight_dp_padding_margin"
        android:layout_marginEnd="@dimen/sixteen_dp_padding_margin"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sph_title_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
